--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: ruby
+sudo: false
 rvm:
   - 2.0.0
   - 1.9.3
   - 1.9.2
   - jruby-18mode
   - jruby-19mode
-  - rbx-2.1.1
+  - rbx-2
   - ruby-head
   - jruby-head
   - 1.8.7
@@ -14,4 +15,4 @@ compiler:
   - clang
   - gcc
 before_script:
-  - rake clobber
+  - bundle exec rake clobber
